--- a/index.html
+++ b/index.html
@@ -36,7 +36,17 @@
             </div>
         </div>
     </div>
+    <div class="popup">
+        <div class="popup__container">
+            <img class="popup__button-close" src="./src/images/Close Icon.png" alt="">
+            <h3 class="popup__header">Редактировать профиль</h3>
+            <input type="text" class="popup__input-name" placeholder="Кот Путешественник">
+            <input type="text" class="popup__input-description" placeholder="Исследователь мира">
+            <button class="popup__button-submit">Сохранить</button>
 
+        </div>
+    </div>
+    <script src="./src/app.js"></script>
 </body>
 
 </html>
