--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="en">
 
 <head>
+    <script type="module" src="./src/app.js"></script>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -43,8 +44,8 @@
             <img class="popup__button-close" src="./src/images/Close Icon.png" alt="">
             <h3 class="popup__header">Редактировать профиль</h3>
             <form>
-                <input type="text" class="popup__input-name" placeholder="Кот Путешественник" id="input-name">
-                <input type="text" class="popup__input-description" placeholder="Исследователь мира"
+                <input type="text" class="popup__input-name" placeholder="Новое имя" id="input-name">
+                <input type="text" class="popup__input-description" placeholder="Новое описание"
                     id="input-description">
                 <input type="submit" class="popup__button-submit">Сохранить</input>
             </form>
@@ -60,7 +61,8 @@
             </form>
         </div>
     </div>
-    <script src="./src/app.js"></script>
+    
+
 </body>
 
 </html>
