--- a/index.html
+++ b/index.html
@@ -56,6 +56,10 @@
                 <input type='submit' class="popup__button-submit" id="add-new-image">Сохранить</input>
             </form>
         </div>
+        <div class="popup__container" id="current-image-container">
+            <img class="popup__button-close" src="./src/images/Close Icon.png" alt="">
+            <img src="" alt="" id="current-image" >
+        </div>
     </div>
     
     <script type="module" src="./src/app.mjs" />
