--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
             <form>
                 <input type="text" class="popup__input-name" placeholder="Новое имя" id="input-name">
                 <input type="text" class="popup__input-description" placeholder="Новое описание" id="input-description" required>
-                <input type="submit" value='Сохранить' class="popup__button-submit" id="add-new-name" required></input>
+                <input type="submit" value="Сохранить" class="popup__button-submit" id="add-new-name" required></input>
             </form>
 
         </div>
@@ -51,6 +51,7 @@
             <h3 class="popup__header">Новое место</h3>
             <form>
                 <input type="text" class="popup__input-name" placeholder="Введите название" id="place-name">
+                <!-- <p class="error_inf">Ошибка</p> -->
                 <input type="text" class="popup__input-description" placeholder="Введите ссылку" id="link-by-user">
                 <input type='submit' value='Сохранить' class="popup__button-submit" id="add-new-image"></input>
             </form>
