--- a/index.html
+++ b/index.html
@@ -40,8 +40,8 @@
             <img class="popup__button-close" src="./src/images/Close Icon.png" alt="">
             <h3 class="popup__header">Редактировать профиль</h3>
             <form>
-                <input type="text" class="popup__input-name" placeholder="Новое имя" id="input-name">
-                <input type="text" class="popup__input-description" placeholder="Новое описание" id="input-description" required>
+                <input type="text" class="popup__input-name" placeholder="Новое имя" id="input-name" data-inputcontain="name">
+                <input type="text" class="popup__input-description" placeholder="Новое описание" id="input-description" data-inputcontain="description" required>
                 <input type="submit" value="Сохранить" class="popup__button-submit" id="add-new-name" required></input>
             </form>
 
@@ -50,9 +50,9 @@
             <img class="popup__button-close" src="./src/images/Close Icon.png" alt="">
             <h3 class="popup__header">Новое место</h3>
             <form>
-                <input type="text" class="popup__input-name" placeholder="Введите название" id="place-name">
+                <input type="text" class="popup__input-name" placeholder="Введите название" id="place-name" data-inputcontain="name">
                 <!-- <p class="error_inf">Ошибка</p> -->
-                <input type="text" class="popup__input-description" placeholder="Введите ссылку" id="link-by-user">
+                <input type="text" class="popup__input-description" placeholder="Введите ссылку" id="link-by-user" data-inputcontain="link">
                 <input type='submit' value='Сохранить' class="popup__button-submit" id="add-new-image"></input>
             </form>
         </div>
