--- a/index.html
+++ b/index.html
@@ -69,7 +69,7 @@
         </div>
     </div>
 
-    <script type="module" src="./src/app.mjs" />
+    <script type="module" src="./app.mjs" />
 
 </body>
 
